--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 {
-    "name": "python_template",
+    "name": "colcon-runner",
     "build": {
         "dockerfile": "Dockerfile",
         "context": "..",
