--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,9 @@ dependencies = []
 Source = "https://github.com/blooop/colcon_runner"
 Home = "https://github.com/blooop/colcon_runner"
 
+[project.scripts]
+cr = "colcon_runner.cr:main"
+
 [tool.pixi.project]
 channels = ["conda-forge"]
 platforms = ["linux-64"]
