--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ description = "A python package template"
 readme = "README.md"
 license = "MIT"
 
-dependencies = []
+dependencies = ["colcon-core"]
 
 [project.urls]
 Source = "https://github.com/blooop/colcon_runner"
