--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "colcon_runner"
 version = "0.2.4"
 authors = [{ name = "Austin Gregg-Smith", email = "blooop@gmail.com" }]
-description = "A python package template"
+description = "A concise CLI wrapper for colcon build/test/clean workflows."
 readme = "README.md"
 license = "MIT"
 
