--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ description = "A concise CLI wrapper for colcon build/test/clean workflows."
 readme = "README.md"
 license = "MIT"
 
-dependencies = []
+dependencies = ["PyYAML>=6.0"]
 
 [project.urls]
 Source = "https://github.com/blooop/colcon_runner"
