--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ Home = "https://github.com/blooop/colcon_runner"
 [project.scripts]
 cr = "colcon_runner.colcon_runner:main"
 
-[tool.pixi.project]
+[tool.pixi.workspace]
 channels = ["conda-forge"]
 platforms = ["linux-64"]
 
