--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,7 +51,7 @@ test = [
   "hypothesis>=6.104.2,<=6.148.9",
   "ruff>=0.5.0,<=0.14.10",
   "coverage>=7.5.4,<=7.13.1",
-  "pre-commit<=4.5.1",
+  "pre-commit==4.5.1",
   "ty>=0.0.8",
 ]
 
