Revert "Force pylint single-process in CI task"
This reverts commit 6b9c3238e80d92d983b5fdb1247eeadde9d8e0e3.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -92,7 +92,7 @@ prek-update = "prek autoupdate"
 format = "ruff format ."
 check-clean-workspace = "git diff --exit-code"
 ruff-lint = "ruff check . --fix"
-pylint = "pylint --version && echo 'running pylint...' && pylint --jobs=1 $(git ls-files '*.py')"
+pylint = "pylint --version && echo 'running pylint...' && pylint $(git ls-files '*.py')"
 ty = "ty check --respect-ignore-files ."
 lint = { depends-on = ["ruff-lint", "ty", "pylint"] }
 style = { depends-on = ["format", "lint"] }
